feat(user_types): Finished the CRUD of entity types
